[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Damage.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Dices.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/ReturnIcon.png" type="Texture" id=3]

[sub_resource type="InputEventAction" id=1]
action = "ui_esc"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Dices" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.0
margin_top = -219.0
margin_right = 341.0
margin_bottom = 219.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 682.0
margin_bottom = 272.0
custom_constants/separation = 73
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 5.0
margin_right = 272.0
margin_bottom = 272.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAttack" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 267.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Atacar/Mirar (d20)"

[node name="ButtonRun" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 267.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Correr/Posicionar/Esquivar (d12)"

[node name="ButtonDef" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 267.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "Defender/Resistir (d20)"

[node name="ButtonShow" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 267.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 1 )
text = "Percepção/ Analisar/Procurar (d6)"

[node name="ButtonMagic" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 267.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 1 )
text = "Magias/Ativas/Ações Especiais (d8)"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 267.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 1 )
text = "Customizado"
align = 1

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 267.0
margin_bottom = 272.0
custom_fonts/font = ExtResource( 1 )
max_length = 18
editable = false
placeholder_text = "Valor maximo do dado, ex:20"

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 430.0
margin_bottom = 272.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 101.0
margin_right = 85.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
text = "Quantidade"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 133.0
margin_right = 85.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
max_length = 2
placeholder_text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 503.0
margin_right = 677.0
margin_bottom = 272.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 94.0
margin_right = 174.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "Vantagem"
align = 1

[node name="CheckButton2" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 138.0
margin_right = 174.0
margin_bottom = 178.0
custom_fonts/font = ExtResource( 1 )
text = "Disvantagem"

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 276.0
margin_right = 682.0
margin_bottom = 310.0
custom_fonts/font = ExtResource( 1 )
text = "Jogar dado(s)"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 314.0
margin_right = 682.0
margin_bottom = 438.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer3"]
margin_right = 682.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Dado selecionado:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer/VBoxContainer3"]
margin_top = 32.0
margin_right = 682.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "1D20"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Panel/VBoxContainer/VBoxContainer3"]
margin_top = 64.0
margin_right = 682.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )
text = "Resultado:"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Panel/VBoxContainer/VBoxContainer3"]
margin_top = 96.0
margin_right = 682.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.098
margin_left = 0.391968
margin_bottom = 0.199997
hint_tooltip = "Voltar para o menu

Atalho: Esc"
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonAttack" to="." method="_on_ButtonAttack_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonRun" to="." method="_on_ButtonRun_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonDef" to="." method="_on_ButtonDef_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonShow" to="." method="_on_ButtonShow_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/ButtonMagic" to="." method="_on_ButtonMagic_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
